--- a/TelecomX_LATAM.ipynb
+++ b/TelecomX_LATAM.ipynb
@@ -2472,13 +2472,123 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "## 1. Introducción\n",
+        "**Objetivo del Análisis:** Determinar las causas raíz del abandono de clientes en la compañía de telecomunicaciones y proponer estrategias basadas en datos para reducir la tasa de fuga actual del **25.76%.**\n",
+        "\n",
+        "**El Problema:** La compañía enfrenta un reto de retención significativo. Identificar \"quién\" se va no es suficiente; el objetivo de este estudio fue diagnosticar \"por qué\" se van, aislando factores operativos, financieros y de servicio que están friccionando la experiencia del cliente."
+      ],
       "metadata": {
-        "id": "XMTac0YJmeK9"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "hRap2YN1cKQd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 2. Limpieza y Tratamiento de Datos\n",
+        "Se procesó un dataset de 7,267 registros (*TelecomX_Data.json*). El flujo de trabajo de Ingeniería de Datos consistió en:\n",
+        "\n",
+        "1. **Ingesta y Aplanado:** Transformación de la estructura JSON anidada a formato tabular plano.\n",
+        "\n",
+        "2. **Conversión de Tipos:** La columna `Totalcharges` presentaba valores nulos ocultos (espacios vacíos), los cuales fueron depurados para permitir el cálculo financiero.\n",
+        "\n",
+        "3. **Codificación:** Transformación de variables categóricas (Texto) a numéricas para el modelado de Machine Learning.\n",
+        "\n",
+        "4. **Generación de KPIs:** Creación de variables binarias para el cálculo preciso de tasas de abandono."
+      ],
+      "metadata": {
+        "id": "ocjv0DM7cdUN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 3. Análisis Exploratorio y Evidencia (Tablas Fundamentales)\n",
+        "\n",
+        "### 3.1. Panorama General de Fuga\n",
+        "La situación actual muestra que **1 de cada 4 clientes** abandona la compañía.\n",
+        "\n",
+        "**Tabla 1: Métricas Globales de Fuga**\n",
+        "| Métrica | Valor Absoluto | Porcentaje / Tasa |\n",
+        "| :--- | :--- | :--- |\n",
+        "| Total Clientes Analizados | 7,256 | 100% |\n",
+        "| Clientes Retenidos | 5,387 | 74.24% |\n",
+        "| Clientes Perdidos (Churn) | 1,869 | 25.76% |\n",
+        "\n",
+        "### 3.2. El Factor Contractual\n",
+        "El tipo de contrato es el predictor más fuerte de lealtad. La fuga se concentra masivamente en los clientes sin compromiso a largo plazo.\n",
+        "\n",
+        "**Tabla 2: Riesgo por Tipo de Contrato**\n",
+        "| Tipo de Contrato | Total Clientes | Clientes Fugados | Tasa de Fuga (%) | Riesgo Relativo |\n",
+        "| :--- | :---: | :---: | :---: | :--- |\n",
+        "| Month-to-month (Mes a mes) | 4,005 | 1,655 | 41.32% | **Crítico** |\n",
+        "| One year (Un año) | 1,518 | 166 | 10.94% | Medio |\n",
+        "| Two year (Dos años) | 1,733 | 48 | 2.77% | Bajo |\n",
+        "\n",
+        "### 3.3. El Factor Financiero (Precio y Pago)\n",
+        "El análisis financiero revela que los clientes que se van pagan considerablemente más que los que se quedan, y utilizan métodos de pago con mayor fricción operativa.\n",
+        "\n",
+        "**Tabla 3: Impacto del Precio Mensual (Monthly Charges)**\n",
+        "| Estado del Cliente | Ticket Promedio Mensual | Antigüedad Promedio |\n",
+        "| --- | --- | --- |\n",
+        "| Clientes Leales (No Churn) | 61.31 USD | 37.6 meses |\n",
+        "| Clientes Fugados (Churn) | 74.44 USD | 17.9 meses |\n",
+        "| Diferencia | +13.13 USD (+21%) | **-19.7 meses** |\n",
+        "\n",
+        "**Tabla 4: Fuga por Método de Pago**\n",
+        "| Método de Pago | Tasa de Fuga (%) | Observación |\n",
+        "| :--- | :---: | :--- |\n",
+        "| Electronic check | 43.80% | **Zona Roja Operativa** |\n",
+        "| Mailed check | 18.59% | Riesgo Moderado |\n",
+        "| Bank transfer (auto) | 16.26% | Riesgo Bajo |\n",
+        "| Credit card (auto) | 14.81% | Riesgo Bajo |\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "WqDfz7Jid1aj"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "## 4. Conclusiones e Insights (Diagnóstico Causal)\n",
+        "Utilizando un algoritmo de **Random Forest** para determinar la importancia de variables y matrices de correlación, llegamos a las siguientes conclusiones definitivas:\n",
+        "\n",
+        "* **El Bolsillo es el detonante principal:** Las variables financieras (`TotalCharges` y `MonthlyCharges`) ocupan el Top 1 y Top 2 en importancia predictiva. Los clientes se van porque sienten que el costo supera al valor recibido, especialmente cuando su factura supera los **$70 USD**.\n",
+        "* **La \"Trampa Operativa\" del Cheque Electrónico:** Un cliente que paga con *Electronic Check* tiene una probabilidad de fuga casi triple que uno con tarjeta de crédito.\n",
+        "* **La Matriz de la Muerte (Hallazgo Clave):** Al cruzar Contrato vs. Pago, encontramos el segmento más tóxico del negocio:\n",
+        "\n",
+        "**Tabla 5: Matriz de Calor de Probabilidad de Fuga**\n",
+        "| Contrato / Pago | Transferencia Auto | Tarjeta Crédito Auto | Electronic Check |\n",
+        "| :--- | :---: | :---: | :---: |\n",
+        "| **Mes a Mes** | 33.1% | 32.0% | **51.9% (PELIGRO)** |\n",
+        "| **Un Año** | 9.5% | 9.9% | 17.8% |\n",
+        "\n",
+        "> **Insight:** Más de la mitad (51.9%) de los usuarios que están en contrato mensual y pagan con cheque electrónico abandonan la empresa.\n"
+      ],
+      "metadata": {
+        "id": "JUuiD07QfhHg"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 5. Recomendaciones Estratégicas\n",
+        "\n",
+        "1. **Campaña \"Cero Fricción\" de Pagos:**\n",
+        "    * **Acción:** Migrar agresivamente a los usuarios de *Electronic Check* hacia pagos automáticos.\n",
+        "    * **Incentivo:** Ofrecer un descuento único de $5 USD por inscribir su tarjeta.\n",
+        "2. **Reestructuración de Precios para Nuevos Usuarios:**\n",
+        "    * **Acción:** Crear un \"Starter Pack\" con precio reducido los primeros 6 meses para aumentar la antigüedad promedio.\n",
+        "3. **Blindaje Contractual:**\n",
+        "    * **Acción:** Eliminar o desincentivar la venta de servicios de alto valor bajo la modalidad *Month-to-month*.\n",
+        "    * **Táctica:** Hacer que el contrato anual incluya beneficios tangibles como instalación gratis."
+      ],
+      "metadata": {
+        "id": "nMWEhU6vdCdM"
+      }
     }
   ]
 }
